# fse

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: fseconfig.cpp.in
src/: consolelogging.cpp  consolelogging.h  engineconfig.cpp  engineconfig.h  filesearchengine.cpp  filesearchengine.h  fseconfig.cpp  fsetypes.h  indextypes.h  invertedindex.cpp  invertedindex.h  osyncstream.cpp  osyncstream.h  searcher.cpp  searcher.h  searchtypes.h  startup.cpp  startup.h  textparser.cpp  textparser.h
src/serializers/: engineconfigserialiazers.h  fsetypesserializers.h  searchtypesserializers.h
test/: CMakeLists.txt  fse_tests.cpp  invertedindex_tests.cpp  searcher_tests.cpp  searchertestingenv.h  textparser_tests.cpp
test/data/basic_set/: config.json  expected_answers.json  requests.json
test/data/basic_set/files/: file1.txt  file2.txt  file3.txt
